--- a/research.html
+++ b/research.html
@@ -491,31 +491,33 @@
 					<td>
 						<a href="https://biostec.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2024.png" height="23" class="pop1"></a> &nbsp
 						<a href="https://biosignals.scitevents.org/?y=2024" target="_blank" rel="noopener noreferrer"><img src="images/BIOSIGNALS2024.png" height="23" class="pop1"></a><br>
-						&#9679; BIOSIGNALS2024 - 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in BIOSTEC 2024), Rome, Itaty
+						&#9679; BIOSIGNALS 2024 - 17<sup>th</sup> International Conference on Bio-Inspired Systems and Signal Processing (in BIOSTEC 2024), Rome, Itaty
 					</td>
 				</tr>
 				<tr>
 					<td align="center">Conference Area Chair</td>
 					<td>
 						<a href="https://e-nns.org/icann2024/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
-						&#9679; BIOSIGNALS2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland
+						&#9679; BIOSIGNALS 2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
+						<a href="https://www.ceii.asia" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="30" class="pop1"></a><br>
+						&#9679; CEII 2024 - 7<sup>th</sup> Asia Conferece on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
 				<tr>
 					<td align="center">Conference Session Chair</td>
 					<td>
 						<a href="https://healthinf.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/HEALTHINF22.png" height="23" class="pop1"></a><br>
-						&#9679; 15<sup>th</sup> International Conference on Health Informatics (in BIOSTEC 2022), Vienna, Austria<br><br>
+						&#9679; HEALTHINF 2022 - 15<sup>th</sup> International Conference on Health Informatics, Vienna, Austria<br>
 						<a href="https://sigmap.scitevents.org/?y=2022" target="_blank" rel="noopener noreferrer"><img src="images/SIGMAP22.png" height="23" class="pop1"></a><br>
-						&#9679; 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br><br>
+						&#9679; SIGMAP 2022 - 19<sup>th</sup> International Conference on Signal Processing and Multimedia Applications, Lisbon, Portugal<br>
 						<a href="https://biostec.scitevents.org//?y=2023" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2023.png" height="23" class="pop1"></a><br>
-						&#9679; 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal
+						&#9679; BIOSTEC 2023 - 16<sup>th</sup> International Joint Conference on Biomedical Engineering Systems and Technologies, Lisbon, Portugal
 					</td>
 				</tr>
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
 					<td>
-						&#9679; For 39 international journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
+						&#9679; For 40 international journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 						&#9679; <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 Outstanding Reviewer Award</a> of Sensors
