--- a/reviewer.html
+++ b/reviewer.html
@@ -65,6 +65,8 @@
 		&#9679; Sports<br>
 		&#9679; Sustainability<br>
 		<br>
+		<img src="images/Qeios.png" height="25" class="pop1"> Qeios<br>
+		<br>
 		<img src="images/Conference.png" height="30" class="pop1"><br>
 		&#9679; ITG, etc.<br>
 		<br>
