--- a/research.html
+++ b/research.html
@@ -500,7 +500,7 @@
 						<a href="https://e-nns.org/icann2024/" target="_blank" rel="noopener noreferrer"><img src="images/ICANN2024.png" height="23" class="pop1"></a><br>
 						&#9679; BIOSIGNALS 2024 - 33<sup>rd</sup> International Conference on Artificial Neural Networks, Lugano, Switzerland<br>
 						<a href="https://www.ceii.asia" target="_blank" rel="noopener noreferrer"><img src="images/CEII2024.png" height="30" class="pop1"></a><br>
-						&#9679; CEII 2024 - 7<sup>th</sup> Asia Conferece on Cognitive Engineering and Intelligent Interaction, Singapore
+						&#9679; CEII 2024 - 7<sup>th</sup> Asia Conference on Cognitive Engineering and Intelligent Interaction, Singapore
 					</td>
 				</tr>
 				<tr>
