--- a/publications.html
+++ b/publications.html
@@ -24,6 +24,18 @@
 		<img src="images/Book.png" height="25">&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/Dissertation.png" height="25">
 	</tr></td>
 	<tr><td>
+		<i>Proceedings of the 17th International Joint Conference on Biomedical Engineering Systems and Technologies – (Volume 1).</i> Guarino, M. P., Hotta, K., Yousef, M., Liu, H., Saggio, G., Fred, A., and Gamboa, H. (2024). INSTICC.<br>
+		<!--
+		<a href="https://scholar.google.com/scholar?q=" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;
+		-->
+		<a href="https://www.researchgate.net/publication/378935961_Proceedings_of_the_17th_International_Joint_Conference_on_Biomedical_Engineering_Systems_and_Technologies_-_Volume_1" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer"><img src="images/SciTePress.png" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=biostec2024&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
+		&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.5220/0000184700003657" target="_blank" rel="noopener noreferrer">10.5220/0000184700003657</a>
+	</tr></td>
+	<tr><td>
 		<i>Sensors for Human Activity Recognition.</i> Liu, H., Gamboa, H., and Schultz, T. (2023). MDPI.<br>
 		<a href="https://scholar.google.com/scholar?q=Sensors+for+Human+Activity+Recognition+H+Liu+H+Gamboa" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 		&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.google.de/books/edition/Sensors_for_Human_Activity_Recognition/jTID0AEACAAJ" target="_blank" rel="noopener noreferrer"><img src="images/GoogleBooks.png" height="15"></a>
