--- a/researchcn.html
+++ b/researchcn.html
@@ -185,7 +185,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1088/2632-2153/ad2492" target="_blank" rel="noopener noreferrer">10.1088/2632-2153/ad2492</a>
 				</tr></td>
 				<tr><td>
-					<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024). IEEE Sensors Journal.<br>
+					<i>Taxonomy and Real-Time Classification of Artifacts during Biosignal Acquisition: A Starter Study and Dataset of ECG.</i> Liu, H.*, Zhang, S., Gamboa, H., Xue, T., Zhou, C., and Schultz, T. (2024). IEEE Sensors Journal, 24(6): 9162-9171. <br>
 					<a href="https://scholar.google.com/scholar?q=Taxonomy+and+Real-Time+Classification+of+Artifacts+during+Biosignal+Acquisition%3A+A+Starter+Study+and+Dataset+of+ECG" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Taxonomy-and-Real-Time-Classification-of-Artifacts-Liu-Zhang/e499518389b2b51b5f4b2a41610f7cf7037818be" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/377731834_Taxonomy_and_Real-Time_Classification_of_Artifacts_during_Biosignal_Acquisition_A_Starter_Study_and_Dataset_of_ECG" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -194,7 +194,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/JSEN.2024.3356651" target="_blank" rel="noopener noreferrer">10.1109/JSEN.2024.3356651</a>
 				</tr></td>
 				<tr><td>
-					<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024). Frontiers in Physiology, 15:1344887. Frontiers Media SA.<br>
+					<i>Robust Human Locomotion and Localization Activity Recognition over Multisensory.</i> Khan, D., Alonazi, M., Abdelhaq, M.*, Mudawi, N. A., Algarni, A., Jalal, A.*, Liu, H.* (2024). Frontiers in Physiology, 15:1344887.<br>
 					<a href="https://scholar.google.de/scholar?q=Robust+Human+Locomotion+and+Localization+Activity+Recognition+over+Multisensory" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Robust-human-locomotion-and-localization-activity-Khan-Alonazi/bb90b2c6698b935dcc789faab546118be8717927" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/378393968_Robust_human_locomotion_and_localization_activity_recognition_over_multisensory" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -212,7 +212,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3390/s24010126" target="_blank" rel="noopener noreferrer">10.3390/s24010126</a>
 				</tr></td>
 				<tr><td>
-					<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology, 14:1282295. Frontiers Media SA.<br>
+					<i>Muscle Synergies in Joystick Manipulation.</i> Cai, L., Yan, S., Ouyang C., Zhang, T., Zhu, J., Chen, L., Ma, X.*, and Liu, H.* (2023). Frontiers in Physiology, 14:1282295.<br>
 					<a href="https://scholar.google.com/scholar?q=Muscle+Synergies+in+Joystick+Manipulation" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Muscle-synergies-in-joystick-manipulation-Cai-Yan/b8f4cacd594fed0ec79a4f7b966d22673e864719" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675206_Muscle_synergies_in_joystick_manipulation" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -221,7 +221,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.3389/fphys.2023.1282295" target="_blank" rel="noopener noreferrer">10.3389/fphys.2023.1282295</a>
 				</tr></td>
 				<tr><td>
-					<i>Outlier Detection Using Iterative Adaptive Mini-Minimum Spanning Tree Generation with Applications on Medical Data.</i> Li, J., Li, JW, Wang, C, Verbeek, F. J.*, Schultz T., and Liu H.* (2023). Frontiers in Physiology, 14:1233341. Frontiers Media SA.<br>
+					<i>Outlier Detection Using Iterative Adaptive Mini-Minimum Spanning Tree Generation with Applications on Medical Data.</i> Li, J., Li, JW, Wang, C, Verbeek, F. J.*, Schultz T., and Liu H.* (2023). Frontiers in Physiology, 14:1233341.<br>
 					<a href="https://scholar.google.com/scholar?q=Outlier+Detection+Using+Iterative+Adaptive+Mini-Minimum+Spanning+Tree+Generation+with+Applications+on+Medical+Data" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/Outlier-detection-using-iterative-adaptive-spanning-Li-Li/fb0fc149b382ef5ce415b44b35ab7352a0eb4b46" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/374675183_Outlier_detection_using_iterative_adaptive_mini-minimum_spanning_tree_generation_with_applications_on_medical_data" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
@@ -282,7 +282,7 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1016/j.softx.2022.101049" target="_blank" rel="noopener noreferrer">10.1016/j.softx.2022.101049</a>
 				</td></tr>
 				<tr><td>
-					<i>CSL-SHARE: A Multimodal Wearable Sensor-Based Human Activity Dataset.</i> Liu, H.*, Hartmann, Y., and Schultz, T. (2021). Frontiers in Computer Science, 3: 759136. Frontiers Media SA.<br>
+					<i>CSL-SHARE: A Multimodal Wearable Sensor-Based Human Activity Dataset.</i> Liu, H.*, Hartmann, Y., and Schultz, T. (2021). Frontiers in Computer Science, 3:759136.<br>
 					<a href="https://scholar.google.com/scholar?q=CSL-SHARE%3A+A+Multimodal+Wearable+Sensor-Based+Human+Activity+Datasets" target="_blank" rel="noopener noreferrer"><img src="images/GoogleScholar.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.semanticscholar.org/paper/CSL-SHARE%3A-A-Multimodal-Wearable-Sensor-Based-Human-Liu-Hartmann/17dbf3ac9e44c44f45589feffbf447afc0349068" target="_blank" rel="noopener noreferrer"><img src="images/Semantic.png" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.researchgate.net/publication/355231971_CSL-SHARE_A_Multimodal_Wearable_Sensor-Based_Human_Activity_Dataset" target="_blank" rel="noopener noreferrer"><img src="images/ResearchGate.png" height="15"></a>
