--- a/students.html
+++ b/students.html
@@ -25,10 +25,10 @@
 				<img src="images/GE.png" height="40"> 
 				<img src="images/PT.png" height="40"> 
 				<img src="images/CN.png" height="40"> 
-				<img src="images/KD.png" height="40"> 
-				<img src="images/IN.png" height="40"> 
 				<img src="images/IR.png" height="40"> 
-				<img src="images/TR.png" height="40">
+				<img src="images/IN.png" height="40"> 
+				<img src="images/KD.png" height="40"> 
+				<img src="images/JP.png" height="40">
 				<img src="images/VN.png" height="40">
 			</td></tr>
 
@@ -48,8 +48,7 @@
 					Research assistant 2018 — 2020<br>
 					Bachelor thesis 2019 @ Bremen, Germany (full score)<br>
 					Master thesis 2020 @ Bremen, Germany (full score)<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Human activity recogntion<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Feature dimensionality study
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Human activity recogntion; Feature engineering
 					<br><br>					
 					&rarr; Ph.D candidate @ University of Bremen
 				</td>
@@ -89,8 +88,7 @@
 				</td>
 				<td>
 					Bachelor thesis 2019 @ Bremen, Germany (full score)<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Android APP development<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Biosignal acquisition
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Android APP development for biosignal acquisition
 					<br><br>
 					&rarr; Software engineer @ TK, Hamburg
 				</td>
@@ -103,8 +101,7 @@
 				</td>
 				<td>
 					Bachelor thesis 2021 @ Bremen, Germany<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Fall detection based on infrared videos<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; RNN
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Fall detection based on infrared videos using RNN
 					<br><br>
 					&rarr;  Software engineer @ RealCore Group, Essen
 				</td>
@@ -117,9 +114,7 @@
 				</td>
 				<td>
 					Bacheler thesis 2022 @ Tbilisi, Georgia<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time workload monitoring<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Heart rate variability<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Inertial sensors
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time workload monitoring using HRV and inertial
 					<br><br>
 					&rarr; Data Engineer @ WearHealth, Bremen
 				</td>
@@ -131,8 +126,7 @@
 				</td>
 				<td>
 					Master thesis 2022 @ Lisbon, Portugal (20/20, best of the year)<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Missing data restoration<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Reliable AI to clinical contexts
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Missing data restoration of reliable AI to clinical contexts
 					<br><br>
 					&rarr; Researcher @ Portugal
 				</td>
@@ -158,8 +152,7 @@
 				</td>
 				<td>
 					Bachelor thesis 2022 @ Bremen, Germany (full score)<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Motion direction distinguishment<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Cross-channel features
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Motion direction distinguishment using cross-channel features
 				</td>
 			</tr>
 
@@ -170,8 +163,7 @@
 				</td>
 				<td>
 					Master thesis 2022 @ Hannover, Germany<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Subsequence search<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic heart sound segmentation
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Subsequence search for automatic heart sound segmentation
 					<br><br>
 					&rarr; IT application developer @ Bosch, Eisenach
 				</td>
@@ -184,8 +176,7 @@
 				</td>
 				<td>
 					Ph.D. thesis 2023 @ Lisbon, Portugal<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Pervasive and remote sensing<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Cardiovascular disease assessment
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Pervasive remote sensing; Cardiovascular disease assessment
 					<br><br>
 					&rarr; Senior Engineer @ PLUX wireless biosignals SA
 				</td>
@@ -235,8 +226,7 @@
 				<td>
 					Guest research scholar<br>
 					Bachelor thesis 2023 @ Goa, India / Bremen, Germany (grade A)<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; fEMG signal processing<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time facial action unit recognition
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Real-time facial action unit recognition using fEMG
 					<br><br>
 					&rarr; Engineer @ India
 				</td>
@@ -248,7 +238,7 @@
 					&copy;<b>Ciwan Gülpinar</b>
 				</td>
 				<td>
-					Bachelor thesis 2022 @ Bremen, Germany<br>
+					Bachelor thesis 2023 @ Bremen, Germany<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Biosignals in VR
 					<br><br>
 					&rarr; Master student @ University of Bremen<br>
@@ -272,10 +262,8 @@
 					<b>Daniel Ott</b>
 				</td>
 				<td>
-					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Symbolic music data processing<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Gui design for singing assistance<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; User experience analysis
+					Bachelor thesis 2024 @ Bremen, Germany (sehr gut/very good)<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Gui design for singing assistance and usability analysis
 				</td>
 			</tr>
 
@@ -297,8 +285,7 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Jogging status recognition<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; HAR-based sonification
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Jogging status recognition; HAR-based sonification
 				</td>
 			</tr>
 
@@ -309,8 +296,7 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; GUI for multichannel information retrieval<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Self-similarity matrix on multimodal data
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; GUI for multichannel information retrieval using SSM
 				</td>
 			</tr>
 
@@ -320,9 +306,10 @@
 					&copy;<b>Thorben Lorenzen</b>
 				</td>
 				<td>
-					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; EMG-based finger recognition<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Piano edutainment
+					Master thesis 2024 @ Bremen, Germany<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; EMG-based finger recognition for piano edutainment
+					<br><br>
+					&rarr; Data engineer @ Munich
 				</td>
 			</tr>
 
@@ -332,8 +319,10 @@
 					&copy;<b>Leon Flaack</b>
 				</td>
 				<td>
-					Graduation research in progress<br>
+					Bachelor thesis 2024 @ Bremen, Germany<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; LSTM-based main melody channel detection from MIDI
+					<br><br>
+					&rarr; Exchange @ Tokyo
 				</td>
 			</tr>
 
@@ -344,7 +333,6 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Inertial signal processing<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Foot activity recognition
 				</td>
 			</tr>
@@ -356,8 +344,7 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic pitching evaluation<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Intonation training
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Automatic pitching evaluation for intonation training
 				</td>
 			</tr>
 
@@ -424,7 +411,18 @@
 				</td>
 				<td>
 					Graduation research in progress<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Melody-based automatical chord generation
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Melody-based automatic harmonization
+				</td>
+			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Robin_Kuri.jpg" width="150"></a><br>
+					&copy;<b>Robin Kuri</b>
+				</td>
+				<td>
+					Graduation research in progress<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; From Mozart dice towards univeral dice
 				</td>
 			</tr>
 
