--- a/studentscn.html
+++ b/studentscn.html
@@ -25,10 +25,10 @@
 				<img src="images/GE.png" height="40"> 
 				<img src="images/PT.png" height="40"> 
 				<img src="images/CN.png" height="40"> 
-				<img src="images/KD.png" height="40"> 
-				<img src="images/IN.png" height="40"> 
 				<img src="images/IR.png" height="40"> 
-				<img src="images/TR.png" height="40"> 
+				<img src="images/IN.png" height="40"> 
+				<img src="images/KD.png" height="40"> 
+				<img src="images/JP.png" height="40">
 				<img src="images/VN.png" height="40">
 			</td></tr>
 
@@ -48,8 +48,7 @@
 					科研助理 2018 — 2020<br>
 					本科毕设 2019 @ 德国不来梅（满分） <br>
 					硕士毕设 2020 @ 德国不来梅（满分）<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 特征空间降维
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别；特征空间降维
 					<br><br>					
 					&rarr; 不来梅大学博士在读
 				</td>
@@ -88,8 +87,7 @@
 				</td>
 				<td>
 					本科毕设 2019 @ 德国不来梅（满分）<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 安卓应用程序开发<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 移动端多模生物信号采集
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 多模态生物信号采集的安卓应用开发
 					<br><br>
 					&rarr; 软件工程师 @ TK保险（汉堡）
 				</td>
@@ -102,8 +100,7 @@
 				</td>
 				<td>
 					本科毕设 2021 @ 德国不来梅<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于红外视频的摔倒识别<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; RNN
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于RNN的红外视频摔倒识别
 					<br><br>
 					&rarr;  软件工程师 @ RealCore集团（埃森）
 					</td>
@@ -116,9 +113,7 @@
 				</td>
 				<td>
 					本科毕设 2022 @ 格鲁吉亚第比利斯<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时工作负载监控<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 心率变异性<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 惯性传感器
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于HRV和惯性传感的实时工作负载监控
 					<br><br>
 					&rarr; 数据工程师 @ WearHealth（不来梅）
 				</td>
@@ -131,8 +126,7 @@
 				</td>
 				<td>
 					硕士毕设 2022 @ 葡萄牙里斯本（满分（20），极难获得）<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 丢失数据恢复<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 临床环境下可靠的人工智能
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 临床环境下可靠的人工智能：丢失数据恢复
 					<br><br>
 					&rarr; 研究员 @ 葡萄牙
 				</td>
@@ -157,8 +151,7 @@
 				</td>
 				<td>
 					本科毕设 2022 @ 德国不来梅（满分）<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 运动方向区分<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 跨信道特征
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 针对运动方向区分的跨信道特征设计
 				</td>
 			</tr>
 
@@ -169,8 +162,7 @@
 				</td>
 				<td>
 					硕士毕设 2022 @ 德国汉诺威<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 子序列搜索<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动心音信号分割
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于子序列搜索的自动心音信号分割
 					<br><br>
 					&rarr; IT应用开发师 @ 博世（爱森纳赫）
 				</td>
@@ -183,8 +175,7 @@
 				</td>
 				<td>
 					博士论文 2023 @ 葡萄牙里斯本<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 普适遥感<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 心血管疾病评估
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 心电图普适遥感；心血管疾病评估
 					<br><br>
 					&rarr; 资深工程师 @ PLUX无线生物信号传感器公司
 				</td>
@@ -205,7 +196,7 @@
 			<tr>
 				<td align="center">
 					<img src="images/students/Romina_Razeghi_Oskouei.jpg" width="150"></a><br>
-					&copy;<b>Romina Razeghi Oskouei（伊朗）</b>
+					&copy;<b>Romina Razeghi Oskouei（伊）</b>
 				</td>
 				<td>
 					科研助理 自2023<br>
@@ -234,8 +225,7 @@
 				<td>
 					访问学生研究员<br>
 					本科毕设 2023 @ 印度果阿 / 德国不来梅（A等）<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 面部肌电信号处理<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 实时表情识别
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于面部肌电信号的实时表情识别
 					<br><br>
 					&rarr; 工程师 @ 印度
 				</td>
@@ -271,10 +261,8 @@
 					<b>Daniel Ott（德）</b>
 				</td>
 				<td>
-					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 符号音乐处理<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 用户体验分析
+					本科毕设 2023 @ 德国不来梅（非常优异）<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 演唱辅助的界面设计和用户体验分析
 				</td>
 			</tr>
 
@@ -296,8 +284,7 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 慢跑状态识别<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 人体动作识别的可听化
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 慢跑状态识别；人体动作识别的可听化
 				</td>
 			</tr>
 
@@ -308,8 +295,7 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 用于多信道联合信息检索的交互界面<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 多模态数据的自相似性矩阵
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 用于多信道联合信息检索的交互界面
 				</td>
 			</tr>
 
@@ -319,19 +305,18 @@
 					&copy;<b>Thorben Lorenzen（德）</b>
 				</td>
 				<td>
-					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于肌电的手指识别<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 钢琴自学辅助
+					硕士毕设 2024 @ 德国不来梅<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 针对钢琴自学的基于肌电的手指识别
 				</td>
 			</tr>
 
 			<tr>
 				<td align="center">
 					<img src="images/students/Leon_Flaack.jpg" width="150"></a><br>
-					&copy;<b>Leon Flaack（德）</b>
+					&copy;<b>Leon Flaack（德；日裔）</b>
 				</td>
 				<td>
-					毕设进行<br>
+					本科毕设 2024 @ 德国不来梅<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于LSTM的MIDI主旋律通道自动识别
 				</td>
 			</tr>
@@ -343,7 +328,6 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 惯性信号处理<br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 足部动作识别
 				</td>
 			</tr>
@@ -355,8 +339,7 @@
 				</td>
 				<td>
 					毕设进行<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 自动人声音高检测<br>
-					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 音准辅助训练
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 用于音准辅助训练的自动人声音高检测
 				</td>
 			</tr>
 
@@ -426,6 +409,18 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于旋律的和弦自动生成
 				</td>
 			</tr>
+
+			<tr>
+				<td align="center">
+					<img src="images/students/Robin_Kuri.jpg" width="150"></a><br>
+					&copy;<b>Robin Kuri（孟）</b>
+				</td>
+				<td>
+					毕设进行<br>
+					&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 从莫扎特骰子到“万能骰”
+				</td>
+			</tr>
+
 
 			<!--
 			<tr>
