--- a/supervision.html
+++ b/supervision.html
@@ -15,6 +15,11 @@
 	<tr><td>2022</td><td>Tobias Dellert</td><td>Data Pipeline in AWS for Real-Time Workload-Monitoring Using HRV- and Inertial-Sensor Data via Mobile APP</td></tr>
 	<tr><td>2022</td><td>Wei Wang</td><td>Towards Automatic Heart Sound Segmentation</td></tr>
 	<tr><td>2023</td><td>Ciwan Gülpinar</td><td>Development of a Virtual Reality Application for the Real-Time Visualization and Archiving of Biosignals</td></tr>
+	<tr><td>2024</td><td>Daniel Ott</td><td>Plattformübergreifende Software-Implementierung für individuelle Tonart-Anpassung mit Validierung der Brauchbarkeit</td></tr>
+	<tr><td>2024</td><td>Leon Flaack</td><td>Klassifizierung von MIDI-Melodiespuren anhand von Long Short-term Memory-Netzwerken</td></tr>
+	<tr><td>2024</td><td>Thorben Lorenzen</td><td>Erkennung von Finger-Aktivitäten beim Klavierspiel mit EMG</td></tr>
+	<tr><td>2024</td><td>Hannes Wehrmann</td><td>Adaption von Musik an die Bewegungsdaten beim Laufen – Implementation und Validierung von ML-Algorithmen für Android-Applikationen</td></tr>
+	<tr><td>2024</td><td>Shiyao Zhang</td><td>Real-Time Artifact Recognition during ECG Acquisition</td></tr>
 	<!--
 	<tr><td>20</td><td>Name</td><td>Title</td></tr>
 	-->
