--- a/research.html
+++ b/research.html
@@ -65,25 +65,17 @@
 
 			<tr><td><h1 align="left"><span style="text-decoration: overline">Research Keywords</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
-				<tr><td>
-					BME, (W)BSN, (W)BAN, Wearables, IMU, (s/f)EMG, EGM (electrogoniometers),<br><br>
-					AI, ML, HMM, UbiComp, HAR, HBR, AUR (action unit recognition), muscle synergy,<br><br>
-					BDM (big data mining), IR (information retrieval), OD (outlier detection),<br><br>
-					SSM (self-similarity matrix), automatic segmentation and annotation,<br><br>
-					Open-source time-series analysis libraries: <a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">feature extraction</a> and <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">subsequence search,</a><br><br>
-					Open-source multimodal human activity <a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">dataset</a>, activity modeling: <i>motion units</i> (MU),<br><br>
-					HCI, CHI, RTS (real-time system), Wi-Fi antennas, metaverse, VR, AR, MR, XR,<br><br>
-					MIR (music information retrieval), folk music, and singing assistance, among others.
-				</td></tr>
-				
-				<tr><td colspan="2">
-					<iframe width="560" height="315" src="https://www.youtube.com/embed/MseG4XWuGzs" title="Intelligent Knee Bandage for HAR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					(Alternative source, downloadable: <a href="https://seafile.zfn.uni-bremen.de/f/6c96c91c878d4d1caa66/" target="_blank" rel="noopener noreferrer"><img src="images/Seafile.png" height="13"></a>)<br><br>
-					Developed the first intelligent knee bandage recognizing human activities in real-time to assist rehabilitation<br>
-					<a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer">Best Paper Award</a> (Student Author) of 
-					<a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" width="80"></a>
-					12th International Joint Conference on Biomedical Engineering Systems and Technologies <img src="images/BestPaperAward.png" height="25" class="pop25"> <img src="images/BestPaper.png" height="15" class="pop25">
-				</td></tr>
+				<tr>
+					<td><a href="images/Keywords.png" target="_blank" rel="noopener noreferrer"><img src="images/Keywords.png" width = "500" class="pop1"></a></td>
+					<td colspan="2">
+						<iframe width="560" height="315" src="https://www.youtube.com/embed/MseG4XWuGzs" title="Intelligent Knee Bandage for HAR" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						(Alternative source, downloadable: <a href="https://seafile.zfn.uni-bremen.de/f/6c96c91c878d4d1caa66/" target="_blank" rel="noopener noreferrer"><img src="images/Seafile.png" height="13"></a>)<br><br>
+						Developed the first intelligent knee bandage recognizing human activities in real-time to assist rehabilitation<br>
+						<a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer">Best Paper Award</a> (Student Author) of 
+						<a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" width="80"></a>
+						12th International Joint Conference on Biomedical Engineering Systems and Technologies <img src="images/BestPaperAward.png" height="25" class="pop25"> <img src="images/BestPaper.png" height="15" class="pop25">
+					</td>
+				</tr>
 			</table></td></tr>
 
 			<tr><td></td></tr><tr><td></td></tr>
@@ -841,7 +833,7 @@
 
 			<tr><td><table align="left" cellpadding="15">
 				<tr><td><b>My research group (partially, 2023)</b></td></tr>
-				<tr><td><a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" height="300" class="pop1"></a><br></td></tr>
+				<tr><td><a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" class="round" height="300" class="pop1"></a><br></td></tr>
 			</table></td></tr>
 
 
