--- a/researchcn.html
+++ b/researchcn.html
@@ -65,25 +65,18 @@
 
 			<tr><td><h1 align="left"><span style="text-decoration: overline">研究领域</span></h1></td></tr>
 			<tr><td><table align="left" cellpadding="15">
-				<tr><td>
-					生医工 BME、普适计算 UbiComp、人体动作识别 HAR HBR、表情识别 AUR、肌肉协同、<br><br>
-					体域网 (W)BAN (W)BSN、可穿戴 Wearables、惯性传感器 IMU、肌电 (s/f)EMG、测角仪 EGM、<br><br>
-					人工智能 AI、机器学习 ML、隐马尔可夫 HMM、大数据挖掘 BDM、信息检索 IR、离群点检测 OD、<br><br>
-					开源时序信号分析代码库：<a href="https://tsfel.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">特征提取</a> 和 <a href="https://tssearch.readthedocs.io/en/latest/" target="_blank" rel="noopener noreferrer">子序列搜索</a>、自相似 SSM、时序信号自动分割标定、<br><br>
-					开源可穿戴式多模态人体动作数据集：<a href="https://www.uni-bremen.de/en/csl/research/human-activity-recognition" target="_blank" rel="noopener noreferrer">CSL-SHARE</a>、人体动作建模：MU (motion units)、<br><br>
-					人机交互 HCI CHI、实时系统 RTS、元宇宙 Metaverse、虚拟/增加/混合现实 VR AR MR XR、<br><br>
-					音乐信息检索 MIR、传统音乐 folk music、演唱辅助 singing assistance 等。
-				</td></tr>
-
-				<tr><td colspan="2">
-					<video width="560" controls="controls">
-						<source src="https://seafile.zfn.uni-bremen.de/f/6c96c91c878d4d1caa66/?dl=1" type="video/mp4" />
-					</video>
-					 （<a href="https://www.youtube.com/embed/MseG4XWuGzs" target="_blank" rel="noopener noreferrer"><img src="images/YouTube.png" height="13"></a>）<br><br>
-					研发出第一款可实时识别人体动作、提供医疗康复辅助的智能膝盖绷带<br>
-					获第12届国际生物医学工程系统和技术联合会议 <a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" width="80"></a> <a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer">最佳论文奖</a>（学生作者）	
-					<img src="images/BestPaperAward.png" height="25" class="pop25"> <img src="images/BestPaper.png" height="15" class="pop25">
-				</td></tr>
+				<tr>
+					<td><a href="images/KeywordsCN.png" target="_blank" rel="noopener noreferrer"><img src="images/KeywordsCN.png" width = "500" class="pop1"></a></td>
+					<td colspan="2">
+						<video width="560" controls="controls">
+							<source src="https://seafile.zfn.uni-bremen.de/f/6c96c91c878d4d1caa66/?dl=1" type="video/mp4" />
+						</video>
+						 （<a href="https://www.youtube.com/embed/MseG4XWuGzs" target="_blank" rel="noopener noreferrer"><img src="images/YouTube.png" height="13"></a>）<br><br>
+						研发出第一款可实时识别人体动作、提供医疗康复辅助的智能膝盖绷带<br>
+						获第12届国际生物医学工程系统和技术联合会议 <a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer"><img src="images/BIOSTEC2019.png" width="80"></a> <a href="https://biostec.scitevents.org/PreviousAwards.aspx#2019" target="_blank" rel="noopener noreferrer">最佳论文奖</a>（学生作者）	
+						<img src="images/BestPaperAward.png" height="25" class="pop25"> <img src="images/BestPaper.png" height="15" class="pop25">
+					</td>
+				</tr>
 			</table></td></tr>
 
 			<tr><td></td></tr><tr><td></td></tr>
@@ -839,7 +832,7 @@
 
 			<tr><td><table align="left" cellpadding="15">
 				<tr><td><b>指导的科研小组部分成员合影（2023）</b></td></tr>
-				<tr><td><a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" height="300" class="pop1"></a><br>
+				<tr><td><a href="images/students/Students_2023.jpg" target="_blank" rel="noopener noreferrer"><img src="images/students/Students_2023.jpg" height="300" class="round"></a><br>
 				</td></tr>
 			</table></td></tr>
 
