--- a/research.html
+++ b/research.html
@@ -459,6 +459,20 @@
 					&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.csl.uni-bremen.de/cms/publications/bibtexbrowser.php?key=liu2011capacity&bib=csl_all_publications.bib" target="_blank" rel="noopener noreferrer"><img src="images/CSL.svg" height="15"></a>
 					&nbsp;&nbsp;&nbsp;&nbsp;<img src="images/doi.png" height="15"><a href="https://doi.org/10.1109/icc.2011.5963075" target="_blank" rel="noopener noreferrer">10.1109/icc.2011.5963075</a>
 				</tr></td>
+				<tr><td>2019</td><td>Yale Hartmann</td><td>Implementation and Optimisation of a Human Activity Recognition System using Sensors integrated into a Knee Bandage</td></tr>
+				<tr><td>2019</td><td>Timo Urban</td><td>Entwicklung einer mobilen Anwendung für Echtzeit-Visualisierung und Archivierung von mehrkanaliger Biosignalaufnahme mit Bluetooth</td></tr>
+				<tr><td>2020</td><td>Lennard Mai</td><td>Automatische Segmentierung von Bewegungsdaten eines biosignalbasierten, in einer Kniebandage integrierten HAR Systems</td></tr>
+				<tr><td>2020</td><td>Yale Hartmann</td><td>Feature Selection for Multimodal Human Activity Recognition</td></tr>
+				<tr><td>2021</td><td>Kilian Lüdemann</td><td>Sturzerkennung in Infrarotvideos mit Hilfe von Rekurrenten Neuronalen Netzen</td></tr>
+				<tr><td>2021</td><td>Steffen Lahrberg</td><td>Direction Distinguishment in Wearable Sensor-Based Human Activity Recognition Using Cross-Channel Features</td></tr>
+				<tr><td>2022</td><td>Tobias Dellert</td><td>Data Pipeline in AWS for Real-Time Workload-Monitoring Using HRV- and Inertial-Sensor Data via Mobile APP</td></tr>
+				<tr><td>2022</td><td>Wei Wang</td><td>Towards Automatic Heart Sound Segmentation</td></tr>
+				<tr><td>2023</td><td>Ciwan Gülpinar</td><td>Development of a Virtual Reality Application for the Real-Time Visualization and Archiving of Biosignals</td></tr>
+				<tr><td>2024</td><td>Daniel Ott</td><td>Plattformübergreifende Software-Implementierung für individuelle Tonart-Anpassung mit Validierung der Brauchbarkeit</td></tr>
+				<tr><td>2024</td><td>Leon Flaack</td><td>Klassifizierung von MIDI-Melodiespuren anhand von Long Short-term Memory-Netzwerken</td></tr>
+				<tr><td>2024</td><td>Thorben Lorenzen</td><td>Erkennung von Finger-Aktivitäten beim Klavierspiel mit EMG</td></tr>
+				<tr><td>2024</td><td>Hannes Wehrmann</td><td>Adaption von Musik an die Bewegungsdaten beim Laufen – Implementation und Validierung von ML-Algorithmen für Android-Applikationen</td></tr>
+				<tr><td>2024</td><td>Shiyao Zhang</td><td>Real-Time Artifact Recognition during ECG Acquisition</td></tr>
 			</table></td></tr>
 
 			<tr><td></td></tr><tr><td></td></tr>
@@ -828,7 +842,9 @@
 
 			<tr><td><table align="left" cellpadding="15">
 				<tr><td><b>Selected Supervised Master and Bachelor Theses</b></td></tr>
-				<tr><td><iframe align="center" width="320%" height="280" src="supervision.html" frameborder="0" scrolling="yes"></iframe></td></tr>
+			<tr><td><table align="left" cellpadding="15">
+			</table></td></tr>
+
 			</table></td></tr>
 
 			<tr><td><table align="left" cellpadding="15">
