--- a/research.html
+++ b/research.html
@@ -522,7 +522,7 @@
 				<tr>
 					<td align="center"><a href="reviewer.html" target="_blank" rel="noopener noreferrer">Reviewer</a></td>
 					<td>
-						&#9679; For 40 international journals, including Nat. Commun., Biomed. Signal Process. Control, Remote Sens., Front. Physiol., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
+						&#9679; For 40 international journals, including Nat. Commun., Biomed. Signal Process. Control, Geo-Spat. Inf. Sci., Remote Sens., Front. Physiol., Front Bioeng. Biotechnol., Physiol. Meas., Phys. Scr., ISPRS Int. J. Geo-Inf., Biomimetics, and Biosensors<br>
 						&#9679; For various conferences, including IEEE BSN, BHI; ACM ICMI, ISWC, AUTOMOTIVEUI; ITP<br>
 						&#9679; <a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer">IOP Trusted Reviewer</a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 						&#9679; <a href="https://www.mdpi.com/journal/sensors/awards/2188" target="_blank" rel="noopener noreferrer">2023 Outstanding Reviewer Award</a> of Sensors
