--- a/reviewer.html
+++ b/reviewer.html
@@ -11,34 +11,37 @@
 	</head>
 	<body>
 		<h2>Hui LIU is a review editor or peer reviewer for</h2>
-		<img src="images/Springer.png" height="20" class="pop1"> <img src="images/SN.png" height="15" class="pop1"><br>
+		<img src="images/Springer.png" height="30" class="pop1"> <img src="images/SN.png" height="25" class="pop1"><br>
 		&#9679; Nature Communications<br>
-		&#9679; Computer Sciences<br>
+		&#9679; SN Computer Sciences<br>
 		&#9679; Frontiers of Information Technology and Electronic Engineering<br>
 		<br>
-		<img src="images/Elsevier.png" height="20" class="pop1"> <img src="images/ScienceDirect.png" height="20" class="pop1"><br>
+		<img src="images/Elsevier.png" height="30" class="pop1"> <img src="images/ScienceDirect.png" height="30" class="pop1"><br>
 		&#9679; Biomedical Signal Processing and Control<br>
 		<br>
-		<img src="images/IOP.png" height="20"><br>
+		<img src="images/TaylorFrancis.png" height="30" class="pop1"><br>
+		&#9679; Geo-spatial Information Science<br>
+		<br>
+		<img src="images/IOP.png" height=25"><br>
 		<a href="images/IOP_Certificate.png" target="_blank" rel="noopener noreferrer"><b>IOP Trusted Reviewer</b></a> in recognition of <i>an exceptionally high level of peer review competency</i><br>
 		&#9679; Physiological Measurement<br>
 		&#9679; Physica Scripta<br>
 		&#9679; Engineering Research Express<br>
 		<br>
-		<img src="images/Frontiers.png" height="25" class="pop1"><br>
+		<img src="images/Frontiers.png" height="35" class="pop1"><br>
 		&#9679; Frontiers in Physiology<br>
 		&#9679; Frontiers in Bioengineering and Biotechnology<br>
 		&#9679; Frontiers in Medicine<br>
 		&#9679; Frontiers in Big Data<br>
 		&#9679; Frontiers in Artificial Intelligence<br>
 		<br>
-		<img src="images/ISPRS.png" height="25" class="pop1"><br>
+		<img src="images/ISPRS.png" height="35" class="pop1"><br>
 		&#9679; ISPRS International Journal of Geo-Information<br>
 		<br>
-		<img src="images/ACCSCIENCE.png" height="25" class="pop1"><br>
+		<img src="images/ACCSCIENCE.png" height="30" class="pop1"><br>
 		&#9679; Arts & Communication<br>
 		<br>
-		<img src="images/MDPI.png" height="25" class="pop1"><br>
+		<img src="images/MDPI.png" height="30" class="pop1"><br>
 		&#9679; Algorithms<br>
 		&#9679; Applied Sciences<br>
 		&#9679; Axioms<br>
@@ -65,13 +68,13 @@
 		&#9679; Sports<br>
 		&#9679; Sustainability<br>
 		<br>
-		<img src="images/Conference.png" height="30" class="pop1"><br>
+		<img src="images/Conference.png" height="35" class="pop1"><br>
 		&#9679; ITG, etc.<br>
 		<br>
-		<img src="images/ACM.png" height="25" class="pop1"><br>
+		<img src="images/ACM.png" height="35" class="pop1"><br>
 		&#9679; ICMI, ISWC, AUTOMOTIVEUI, etc.<br>
 		<br>
-		<img src="images/IEEE.png" height="25" class="pop1"><br>
+		<img src="images/IEEE.png" height="30" class="pop1"><br>
 		&#9679; BHI-BSN, etc.
 	</body>
 </html>
