--- a/researchcn.html
+++ b/researchcn.html
@@ -1136,6 +1136,9 @@
 					<td>
 						硕士毕设 2024 @ 德国不来梅<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 针对钢琴自学的基于肌电的手指识别
+						<br><br>
+						&rarr; 数据工程师 @ 慕尼黑
+
 					</td>
 				</tr>
 
@@ -1147,6 +1150,8 @@
 					<td>
 						本科毕设 2024 @ 德国不来梅<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于LSTM的MIDI主旋律通道自动识别
+						<br><br>
+						&rarr; 海外交换 @ 东京
 					</td>
 				</tr>
 
@@ -1247,6 +1252,17 @@
 					<td>
 						毕设进行<br>
 						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 从莫扎特骰子到“万能骰”
+					</td>
+				</tr>
+
+				<tr>
+					<td align="center">
+						<img src="images/students/Male.png" width="150" class="round"></a><br>
+						&copy;<b>David Czesla</b>
+					</td>
+					<td>
+						毕设进行<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; 基于手指和音高识别的钢琴自学反馈系统
 					</td>
 				</tr>
 
