--- a/research.html
+++ b/research.html
@@ -1255,6 +1255,17 @@
 					</td>
 				</tr>
 
+				<tr>
+					<td align="center">
+						<img src="images/students/Male.png" width="150" class="round"></a><br>
+						&copy;<b>David Czesla</b>
+					</td>
+					<td>
+						Graduation research in progress<br>
+						&nbsp;&nbsp;&nbsp;&nbsp;&#9679; Piano self-learning feedback based on finger and pitch recognition
+					</td>
+				</tr>
+
 				<!--
 				<tr>
 					<td align="center">
