--- a/researchcn.html
+++ b/researchcn.html
@@ -853,7 +853,7 @@
 
 			<tr><td><table align="left" cellpadding="15">
 				<tr>
-					<td><b>指导的科研助理以及毕设学生列表</b></a></td>
+					<td><b>指导的优秀科研助理以及毕设学生列表</b></a></td>
 					<td align="center" colspan="2">
 						<img src="images/DE.svg" height="40" class="round"> 
 						<img src="images/BD.png" height="40" class="round"> 
@@ -1257,7 +1257,7 @@
 
 				<tr>
 					<td align="center">
-						<img src="images/students/Male.png" width="150" class="round"></a><br>
+						<img src="images/students/David_Czesla.jpg" width="150" class="round"></a><br>
 						&copy;<b>David Czesla</b>
 					</td>
 					<td>
